@@ -1,11 +1,12 @@
 
 Changes in JMurmel-1.4 relative to JMurmel-1.3
 
- * added the special form "try" and function "typep"
  * removed the undocumented function "fatal" from Murmel,
    moved the function "error" from mlib to Murmel and now it is similar to CL's "error"
+
  * added the function "read-from-string"
- * added the global variable *condition-handler*
+ * added the special form "try" and the function "typep"
+ * added condition types, the global variable *condition-handler* and some condition handling
 
 
 Changes in JMurmel-1.3 relative to JMurmel-1.2.2
